ID-73 fixed publish button not showing

--- a/source/assets/styles/buildkit.css
+++ b/source/assets/styles/buildkit.css
@@ -1269,7 +1269,7 @@ md-dialog{
 }
 
 .md-dialog-main{
-    max-height: 70vh;
+    max-height: 60vh;
     overflow-x: hidden;
     overflow-y: auto;
     padding: 25px 40px 0;
